--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,87 @@
-/venv
-test_setup.py
+# ============================================
+# Twitstar - Python + React Monorepo
+# ============================================
+
+# === Python ===
+venv/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# === Node.js / React ===
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Build outputs
+frontend/dist/
+frontend/build/
+.next/
+out/
+
+# === Environment ===
+.env
+.env.local
+.env.*.local
+*.env
+
+# === IDE ===
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+
+# === OS ===
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# === Project Specific ===
 cookies.json
+backend/cookies.json
+error_screenshot.png
+test_setup.py
+
+# Virtual environments (anywhere in project)
+**/venv/
+
+# === Logs ===
+logs/
+*.log
+
+# === Coverage & Testing ===
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
