--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-force-graph-2d": "^1.29.0",
+    "react-markdown": "^10.1.0",
     "react-plotly.js": "^2.6.0",
     "react-range": "^1.10.0"
   },
